crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_arw.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 598
expression: "probe_json(\"happy.arw\")"
---
{
  "containers": [
    {
      "kind": "container",
      "label": "tiff",
      "offset_end": 326,
      "offset_start": 0
    },
    {
      "kind": "ifd",
      "label": "ifd0",
      "offset_end": 94,
      "offset_start": 8,
      "parent_label": "tiff"
    },
    {
      "kind": "ifd",
      "label": "exif_ifd",
      "offset_end": 230,
      "offset_start": 132,
      "parent_label": "tiff"
    }
  ],
  "input": {
    "container": "arw",
    "detected_format": "arw",
    "path": "happy.arw"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
