crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_cr2.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"happy.cr2\")"
---
{
  "containers": [
    {
      "kind": "container",
      "label": "tiff",
      "offset_end": 385,
      "offset_start": 0
    },
    {
      "kind": "ifd",
      "label": "ifd0",
      "offset_end": 102,
      "offset_start": 16,
      "parent_label": "tiff"
    },
    {
      "kind": "ifd",
      "label": "exif_ifd",
      "offset_end": 250,
      "offset_start": 140,
      "parent_label": "tiff"
    }
  ],
  "input": {
    "container": "cr2",
    "detected_format": "cr2",
    "path": "happy.cr2"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
