crates/xifty-cli/tests/snapshots/cli_contract__probe_happy_cr3.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"happy.cr3\")"
---
{
  "containers": [
    {
      "kind": "box",
      "label": "ftyp",
      "offset_end": 24,
      "offset_start": 0
    },
    {
      "kind": "box",
      "label": "moov",
      "offset_end": 826,
      "offset_start": 24
    },
    {
      "kind": "box",
      "label": "moov/uuid",
      "offset_end": 826,
      "offset_start": 32,
      "parent_label": "moov"
    }
  ],
  "input": {
    "container": "cr3",
    "detected_format": "cr3",
    "path": "happy.cr3"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
